# seatsaero

./: .gitignore  CLAUDE.md  README.md  cli.py  mcp_server.py  pyproject.toml  requirements.txt  scrape.py
.claude/skills/flights/: SKILL.md
.devcontainer/: devcontainer.json
core/: cookie_farm.py  db.py  ghost_click.py  hybrid_scraper.py  matching.py  notify.py  output.py  presentation.py  routes.py  scheduler.py  schema.py  united_api.py  watchlist.py
docs/: commands.md  faq.md  getting-started.md  project-brief.md
routes/: canada_12.txt
scripts/: burn_in.py  codespace_scrape.sh  merge_remote_db.py  orchestrate.py  verify_data.py
scripts/experiments/: cookie_farm.py  hybrid_scraper.py
specs/: agent-integration-claude-md.md  agent-ux-mcp-session-formatting.md  alerts.md  burn-diagnostics.md  cli-batch-resilience.md  cli-integration-test.md  cli-query-command.md  cli-query-filters-export.md  cli-real-scraper-integration.md  cli-schedule-visualization-agent-hints.md  cli-search-command.md  cli-skeleton-setup-command.md  cli-status-command.md  codespace-scraper-setup.md  context7-plan-enrichment.md  db-cache-ttl.md  e2e-data-path-integration-test.md  file-based-mfa-handoff.md  fix-false-negative-session-detection.md  fix-login-detection.md  mcp-codespace-scrape.md  mcp-instant-return-session-keepalive.md  mcp-scrape-progress.md  mcp-server.md  mcp-session-reliability.md  mfa-aware-mcp-server.md  phase3-e2e-testing.md  price-history.md  sms-mfa-login.md  sqlite-migration.md  warm-session-health-check.md
tests/: test_cli.py  test_cli_full.py  test_cli_integration.py  test_db.py  test_e2e.py  test_integration.py  test_mcp.py  test_notify.py  test_output.py  test_schedule.py  test_schema.py  test_watchlist.py
