[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seataero"
version = "0.1.0"
description = "United MileagePlus award flight search CLI"
requires-python = ">=3.11"
dependencies = [
    "curl_cffi>=0.7",
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "apscheduler>=3.10,<4",
    "sqlalchemy>=2.0",
    "mcp[cli]>=1.20",
]

[tool.setuptools]
py-modules = ["cli", "scrape", "mcp_server"]
packages = ["core"]

[project.scripts]
seataero = "cli:main"
seataero-mcp = "mcp_server:main"
