[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seataero"
version = "0.1.1"
description = "United MileagePlus award flight search CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl_cffi>=0.7",
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "python-ghost-cursor>=0.1.1",
    "rich>=13.0",
    "asciichartpy>=1.5",
    "tabulate>=0.9",
]

[tool.setuptools]
py-modules = ["cli", "scrape"]
packages = ["core"]

[tool.pytest.ini_options]
pythonpath = ["."]

[project.scripts]
seataero = "cli:main"
